# LifeLogr

./: .dockerignore  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  agy_sug_299526.md  appimage_plan.md  claude_conv.md  claude_conv_230526.md  data_management_improvement_blueprint.md  dev.sh  docker-compose.yml  gemini_report.md  raw_idea.txt
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
.local/: agy_review_280526.md
.pipeline/: audit-final-test.txt  audit-fix1-test.txt  baseline-frontend-build.txt  baseline-mypy.txt  baseline-test-results.txt  blind-review.md  inventory.csv  phase1-post-test-results.txt  phase2-backend-post-test.txt  phase3-post-test.txt  purge-plan.md  refactor-plan.md  style-plan.md
backend/: .env.example  dev.db-shm  dev.db-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01472f00acb3_add_geotagging_inline_video.py  3fc018e50704_add_fts5_entries_search.py  6f95102f8e2f_add_entry_encryption_fields_and_.py  8cb29b3d2888_add_reminders_table.py  9a0e94a40c33_initial_schema_from_existing.py  a1b2c3d4e5f6_drop_entry_date_unique.py  f047afab5e35_add_sync_and_plugin_tables.py
backend/app/: main.py
backend/app/core/: archive.py  config.py  database.py  exceptions.py  oauth_state.py  paths.py  restore.py  security.py  startup_checks.py
backend/app/models/: __init__.py  backup.py  contact.py  contact_group.py  digest.py  email_account.py  email_attachment.py  email_folder.py  email_message.py  embedding.py  entry.py  google_sync.py  media.py  note.py  note_media.py  ocr_result.py  plugin.py  prompt.py  recording.py  reflection_prompt.py  reminder.py  revision.py  schedule_event.py  sentiment.py  spam_blocklist.py  sync.py  tag.py  task.py  template.py  video_note.py
backend/app/routers/: _oauth_result.py  ai.py  analytics.py  backup.py  box.py  contacts.py  dropbox.py  email.py  encryption.py  entries.py  export.py  google_drive.py  google_sync.py  media.py  memorial.py  notes.py  onedrive.py  planner.py  plugins.py  prompts.py  recordings.py  reminders.py  revision.py  search.py  settings.py  sync.py  tags.py  templates.py  tts.py  video_notes.py
backend/app/schemas/: ai.py  analytics.py  backup.py  contact.py  email.py  encryption.py  entry.py  geotagging.py  media.py  note.py  note_media.py  ocr.py  planner.py  plugin.py  prompt.py  recording.py  reminder.py  revision.py  search.py  sync.py  tag.py  template.py  video_note.py
backend/app/services/: ai_tool_registry.py  analytics_service.py  backup_service.py  calendar_sync_service.py  cloud_sync_service.py  contact_service.py  contacts_sync_service.py  digest_service.py  email_protocol.py  email_service.py  embedding_service.py  encryption_service.py  enrichment_service.py  entry_service.py  export_service.py  google_oauth.py  google_sync_service.py  google_sync_utils.py  media_service.py  note_media_service.py  note_service.py  ocr_service.py  ollama_service.py  planner_service.py  plugin_manager.py  plugin_service.py  prompt_service.py  recording_service.py  reminder_service.py  revision_service.py  scheduler_service.py  search_service.py  semantic_cache.py  spam_service.py  storage_service.py  sync_service.py  tag_service.py  tasks_sync_service.py  template_service.py  video_service.py  (+1 more)
backend/app/services/importers/: __init__.py  csv.py  dayone.py
backend/plugins/: __init__.py  hello_world.py
backend/scripts/: export_conv.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_endpoints.py  test_contacts.py  test_email.py  test_google_drive.py  test_notes.py  test_planner.py  test_spam.py  test_tts.py
backend/tests/unit/: test_ai_tool_registry.py  test_analytics_service.py  test_backup_full.py  test_backup_label.py  test_backup_service.py  test_cloud_sync_pull.py  test_contacts_sync.py  test_database_pragmas.py  test_db_maintenance.py  test_email_protocol.py  test_encryption_service.py  test_entry_service.py  test_entry_template_filter.py  test_export_service.py  test_geotagging.py  test_google_client_credentials.py  test_google_sync.py  test_health_and_brand.py  test_importers.py  test_media_service.py  test_notes.py  test_ocr_service.py  test_ollama_service.py  test_plugin_service.py  test_prompt_service.py  test_recording_service.py  test_reminder_scheduling.py  test_reminder_service.py  test_revision_service.py  test_scheduler_service.py  test_search_service.py  test_security.py  test_semantic_cache.py  test_settings.py  test_startup_checks.py  test_storage_service.py  test_sync_pollers.py  test_sync_service.py  test_tag_service.py  test_video_service.py
conductor/: diarilinux-enhancement-plan.md  gemi_review.md  lifelogr-enhancement-plan.md
conductor/tracks/: web-app-enhancements.md
contrib/: diarilinux.service
desktop/: Makefile
desktop/scripts/: download-whisper-model.sh  pyinstaller.spec  setup-linux.sh
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: BUILD_GUIDE.md  blog_lifelogr_vs_diarium.md
docs/00-domain/: CONTEXT_MAP.md  DOMAIN.md
docs/01-requirements/: REQUIREMENTS.md
docs/02-spec/: SPEC.md
docs/03-review/: REVIEW.md
docs/04-design/: DESIGN.md
docs/04-design/ADR/: 001-sqlite-as-primary-database.md  002-no-auth-local-endpoints.md  003-offset-pagination.md  004-filesystem-media-storage.md  005-background-tasks-for-backup.md  (+1 more)
docs/manual/: API_REFERENCE.md  DEPLOYMENT.md  USER_MANUAL.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  version.ts
frontend/test-results/: .last-run.json
frontend/tests/: entries.spec.ts  recordings.spec.ts  settings.spec.ts
mobile/: Makefile  capacitor.config.ts
prompts/: p0_domain.txt  p3_review.txt  p5.5_review_code.txt  p6_test.txt
scripts/: build-web-deb.sh  build.sh
shared/src/: desktop.ts  features.ts  index.ts  mobile.ts  platform.ts
trash2review/: README.md
(+172 files in other folders)
