[project]
name = "lifelogr"
version = "0.2.0"
description = "Privacy-first, offline-first journaling app for Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "fpdf2>=2.8.3",
    "httpx>=0.28.1",
    "markdown-it-py>=4.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pysqlite3-binary>=0.5.4.post2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.2.1"]
ocr = ["pytesseract>=0.3.13", "pillow>=12.2.0"]
pdf = ["weasyprint>=68.1"]
tts = ["edge-tts>=7.2.8"]
image = ["pillow>=12.2.0"]
cloud = ["mega.py>=0.1.0"]
all = ["lifelogr[stt,ocr,pdf,tts,image,cloud]"]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "mypy>=2.0.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true

[tool.uv]
override-dependencies = ["pathlib ; sys_platform == 'never'"]
