[package]
name = "lifelogr"
version = "0.4.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["devtools"]
devtools = ["tauri/devtools"]

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
