[package]
name = "lifelogr"
version = "0.7.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
xcap = { version = "0.9", optional = true }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["devtools", "snip"]
devtools = ["tauri/devtools"]
# Screen-region snip requires xcap, which needs libpipewire-0.3-dev to build on
# Linux. Off => the capture_screen command returns a friendly error (web-clip
# image capture and the text fallback still work). Build without it with
# `--no-default-features --features devtools`.
snip = ["dep:xcap"]

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
